--- a/experience.html
+++ b/experience.html
@@ -95,6 +95,7 @@
                                     <span class="tag">PyTorch</span>
                                     <span class="tag">Hugging Face</span>
                                     <span class="tag">Weights & Biases</span>
+                                    <span class="tag">nnsight</span>
                                     <!-- <span class="tag">Optimizers</span> -->
                                 </div>
                             </div>
