--- a/notable_projects.html
+++ b/notable_projects.html
@@ -110,7 +110,7 @@
 
                                     </div>
                                     <!-- <div class="row"> -->
-                                            <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                            <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
                                         
                                             Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a>
                                     <!-- </div>      -->
@@ -151,7 +151,8 @@
                                         <span class="tag">NLP</span>
                                         <span class="tag">Transformers</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/chatgpt" style="color:#52adc8">GPT from Scratch</a></p>
+                                    <a href="https://github.com/venkydesai/chatgpt"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                    Project Link: &nbsp; <a href="https://github.com/venkydesai/chatgpt" style="color:#52adc8">GPT from Scratch</a>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div2">
@@ -192,7 +193,8 @@
                                         <span class="tag">NLP</span>
                                         <span class="tag">Transformers</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8">Super Resolution using CRN Architecture</a></p>
+                                    <a href="https://github.com/venkydesai/Super_Resolution"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                    Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8">Super Resolution using CRN Architecture</a>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div3">
@@ -232,7 +234,8 @@
                                         <span class="tag">VGGNet</span>
                                         <span class="tag">U-Net</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8">Shadow removal via Shadow Decomposition</a></p>
+                                    <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                    Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8">Shadow removal via Shadow Decomposition</a>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div4">
@@ -268,7 +271,8 @@
                                         <span class="tag">Python</span>
                                         <span class="tag">Iterative Closest Point</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point" style="color:#52adc8">Iterative Closest Point</a></p>
+                                    <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                    Project Link: &nbsp; <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point" style="color:#52adc8">Iterative Closest Point</a>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div5">
@@ -308,12 +312,13 @@
                                         <span class="tag">TurtleBot3</span>
                                         <span class="tag">AprilTag</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Team-Splinter-Autonomous-Ground-Robot-For-Reconnaissance/tree/main" style="color:#52adc8">Autonomous Ground Robot For Reconnaissance</a></p>
+                                    <a href="https://github.com/venkydesai/Team-Splinter-Autonomous-Ground-Robot-For-Reconnaissance/tree/main"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
+                                    Project Link: &nbsp; <a href="https://github.com/venkydesai/Team-Splinter-Autonomous-Ground-Robot-For-Reconnaissance/tree/main" style="color:#52adc8">Autonomous Ground Robot For Reconnaissance</a>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div6">
                                         <img class="mySlides" src="images/notable_projects/RRT/Rescue_robot.jpg" style="width:100%; height:285px; border-radius: 10px;">
-                                        <img class="mySlides" src="images/notable_projects/RRT/Robot_maze.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/Robot_maze.png" style="width:100%; height:350px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/RRT/April_Tag.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/RRT/RRT_local.jpeg" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/RRT/Map_final.png" style="width:100%; height:285px; border-radius: 10px;">
