--- a/ml-projects.html
+++ b/ml-projects.html
@@ -65,12 +65,12 @@
                 <meta itemprop="headline" content="Venkatesh Desai - Machine Learning Projects">
                 <meta itemprop="description" content="Venkatesh Desai - Machine Learning Projects">
                 <h1 style="font-size: xx-large;text-align: center;"><b>Projects</b></h1>
-                <h2 style="font-size: x-large;"><b>Machine Learning Projects</b></h2>
+                <!-- <h2 style="font-size: x-large;"><b>Machine Learning Projects</b></h2> -->
                 
                 <div class="row" style="margin-top: 2%;">
                     <div class="col-lg-6">
                         <div class="list__item" style="margin-top: 2%;">
-                            <div class="card" style="height: 360px;">
+                            <div class="card" style="height: 400px;">
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
@@ -86,7 +86,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:80%; height:160px; border-radius: 10px; margin-bottom: 2%; align-self: center;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
