--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
 	<div itemscope itemtype="http://schema.org/Person">
 		<div class="author__avatar"> <img src="images/venky_profile.png" class="author__avatar" alt="Venkatesh Desai" style="padding-top: 0%; padding-bottom: 0%;"></div>
 		<div class="author__content"><br>
-			<h2 style="font-size: large" class="author__name"><b>Venkatesh Desai</b></h2>
+			<h2 style="font-size: x-large" class="author__name"><b>Venkatesh Desai</b></h2>
 			<p class="author__bio"  style="font-size: 15px;">MS in Robotics (CS conc.)<br>Northeastern University<br>Boston, MA</p>
 		</div>
 		<div class="author__urls-wrapper">
