--- a/ml-projects.html
+++ b/ml-projects.html
@@ -296,7 +296,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/Customer-Segmentation-Using-K-Means-Clustering"><img src="images/ml-projects/k_means.png" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
+                                        <a href="https://github.com/venkydesai/Customer-Segmentation-Using-K-Means-Clustering"><img src="images/ml-projects/k_means.png" style="width:100%; height:140px; border-radius: 10px; margin-bottom: 1%; align-self: center;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -427,9 +427,9 @@
                             </div>
                         </div>
                     </div><div class="col-lg-6"> -->
-                            </div>
+                            <!-- </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-6">
                         <div class="list__item" style="margin-top: 2%;">
                             <div class="card" style="height: 360px;">
