--- a/ml-projects.html
+++ b/ml-projects.html
@@ -430,7 +430,7 @@
                             <!-- </div>
                         </div>
                     </div> -->
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <div class="list__item" style="margin-top: 2%;">
                             <div class="card" style="height: 360px;">
                                 <div class="card-content">
@@ -459,7 +459,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div><div class="col-lg-6">
+                    </div>-->
+                    <div class="col-lg-6"></div>
                         <div class="list__item" style="margin-top: 2%;">
                             <div class="card" style="height: 360px;">
                                 <div class="card-content">
