--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
                         <p><em>"Unraveling the mysteries hidden in data 🌐, sculpting ⛏️ the brains of artificial intelligence layer by layer, teaching robots 🤖 to navigate the world,  empowering machines with the sense of sight 👁️, and empowering machines to comprehend and communicate with us."</em></p>
                         
-                        <p>Greetings! 🎓 Currently, I am pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. I did my Bachelors from <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> As a student in this field, I am dedicated to engineering the future where machines operate with precision and purpose, blending the realms of technology and innovation.</p>
+                        <p>Greetings! 🎓 Currently, I am pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. I did my Bachelors in Mechanical Engieering from <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2021. I currently work as Research Assistant for Prof. David Bau interpreting Neural Networks Collaborating on enhancing nnsight library, a package for interpreting and manipulating the internals of a neural network. I am also a Graduate Teaching Assistant for course CS7150 - Deep Learning which mainly focuses on Neural Network, Transformers, VAE’s, Stable Diffusion concepts. Designing assignments, conducting TA sessions, organizing Quiz and conducting discussions on cutting-edge research areas such as GAN’s, Image Transformer, and LLM to help students stay up to date of the latest advancements.</p>
+<!-- 
+                        As a student in this field, I am dedicated to engineering the future where machines operate with precision and purpose, blending the realms of technology and innovation. -->
 
                         <!-- <p>My passion lies in interpreting the mysterious world of data, meticulously untangling its complexities to extract valuable insights. I consider myself an adept navigator of the intricate landscapes of information. 🌐</p>
 
@@ -84,7 +86,7 @@
 
                         <p>My professional interests extend to projects spanning Robotics, Machine Learning, Deep Learning, Computer Vision, and Natural Language Processing. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. 🔬</p>
 
-                        <p>Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life. In essence, my work transcends mere occupation; it embodies a fervent dedication to leveraging technology for positive change. 🚀</p>
+                        <p>Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life. This passion had pushed me to convert my design project during my undergradute days to a product which could benefit a number of cyclists. As a co-founder of iTorque .... 🚀</p>
 
                         <p>If you share my passion for innovation and technological advancement, I invite you to join me on this journey of exploration and discovery. 🌟</p>
 
