--- a/ml-projects.html
+++ b/ml-projects.html
@@ -331,7 +331,7 @@
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
                                             <span class="tag">Numpy</span>
-                                            <span class="tag">Machine Learning</span>
+                                            <span class="tag">Pytorch</span>
                                         </div>
                                     </div>
                                 </div>
@@ -361,7 +361,7 @@
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
                                             <span class="tag">Numpy</span>
-                                            <span class="tag">Machine Learning</span>
+                                            <span class="tag">Pytorch</span>
                                         </div>
                                     </div>
                                 </div>
@@ -391,7 +391,7 @@
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
                                             <span class="tag">Numpy</span>
-                                            <!-- <span class="tag">Machine Learning</span> -->
+                                            <span class="tag">Lie Group</span>
                                         </div>
                                     </div>
                                 </div>
@@ -421,7 +421,7 @@
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
                                             <span class="tag">Numpy</span>
-                                            <!-- <span class="tag">Machine Learning</span> -->
+                                            <span class="tag">Dijkstra Algorithm</span>
                                         </div>
                                     </div>
                                 </div>
@@ -451,7 +451,7 @@
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
                                             <span class="tag">Numpy</span>
-                                            <span class="tag">Machine Learning</span>
+                                            <span class="tag">Dijkstra Algorithm</span>
                                         </div>
                                     </div>
                                 </div>
