--- a/notable_projects.html
+++ b/notable_projects.html
@@ -277,8 +277,8 @@
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div5">
                                         <img class="mySlides" src="images/notable_projects/ICp/2.gif" style="width:100%; height:285px; border-radius: 10px;">
-                                        <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
-                                        <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this,1)">&#10095;</a>
+                                        <!-- <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
+                                        <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this,1)">&#10095;</a> -->
                                     </div>
                                 </div>
                             </div>
