--- a/notable_projects.html
+++ b/notable_projects.html
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div2">
-                                        <img class="mySlides" src="images/notable_projects/attention_research_1.jpeg" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/GPT/gpt2-weights-2.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/Full_GPT_architecture.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/decoder.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
