--- a/header.html
+++ b/header.html
@@ -6,10 +6,10 @@
             <ul class="visible-links">
                <li style="font-size: medium;"><a href="index.html">Home</a></li>
                <li style="font-size: medium;"><a href="experience.html">Experience</a></li>
-               <li style="font-size: medium;"><a href="notable_projects.html">Notable Projects</a></li>
-               <li style="font-size: medium;"><a href="ml-projects.html">Projects</a></li>
+               <li style="font-size: medium;"><a href="research_work.html">Research Work</a></li>
+               <li style="font-size: medium;"><a href="projects.html">Projects</a></li>
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
-               <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf">Resume</a></li>
+               <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf" target="_blank">Resume</a></li>
             </ul>
          <div style="float: right; margin: -40px ; height:50px; width: 50px ;"> <img src="images/VD_logo_circular.png" alt="Venkatesh Logo"></img></div>
          </nav>
