researche_work_update

--- a/research_work.html
+++ b/research_work.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <br>
-                <h2 style="font-size: xx-large;text-align: center;"><b>Natural Language Processing Projects</b></h2>
+                <h2 style="font-size: xx-large;text-align: center;"><b>Natural Language Processing</b></h2>
                 <div class="list__item" style="margin-top: 2%;">
                     <div class="card">
                         <div class="card-content">
