--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
                <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf" target="_blank">Resume</a></li>
             </ul>
-         <div style="float: right; margin: -40px ; height:50px; width: 50px ;"><a href="https://github.com/anshuman2051/brahmandaApp"><img src="images/VD_logo_circular.png" alt="Venkatesh Logo"></img></a></div>
+         <div style="float: right; margin: -40px ; height:50px; width: 50px ;"><img src="images/VD_logo_circular.png" alt="Venkatesh Logo"></img></div>
          </nav>
       </div>
    </div>
