--- a/projects.html
+++ b/projects.html
@@ -331,9 +331,9 @@
                                         <a href="https://github.com/venkydesai/Can-I-be-an-Influencer"><img src="images/ml-projects/Influ.jpg" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
-                                            <span class="tag">Pandas</span>
-                                            <span class="tag">Numpy</span>
                                             <span class="tag">Machine Learning</span>
+                                            <span class="tag">Kaggle</span>
+                                            <span class="tag">Data Science Hackathon</span>
                                         </div>
                                     </div>
                                 </div>
