--- a/research_work.html
+++ b/research_work.html
@@ -226,9 +226,9 @@
                                     <p style="text-align: justify;  text-justify: inter-word;">This project implements an advanced Image Enhancement technique using Super Resolution, based on the model introduced in the paper 'Fast, Accurate, and Lightweight Super-Resolution with Cascading Residual Network.' It addresses the challenge of high computational costs in Single Image Super-Resolution tasks by proposing an efficient and lightweight model. The key innovation involves a cascading mechanism within a residual network, facilitating efficient information transfer to higher layers. Additionally, residual-E blocks, employing group convolution, reduce computational operations (MultiAdds). Through comprehensive evaluations on standard datasets like Set5 and Urban100, the model consistently matches state-of-the-art performance. Leveraging insights from the paper, this project delivers an enhanced solution for improving image quality through super-resolution.</p>
                                     <div class="tags">
                                         <span class="tag">Python</span>
+                                        <span class="tag">Pytorch</span>
                                         <span class="tag">Deep Learning</span>
-                                        <span class="tag">NLP</span>
-                                        <span class="tag">Transformers</span>
+                                        <span class="tag">Cascading Residual Network</span>
                                     </div>
                                     <a href="https://github.com/venkydesai/Super_Resolution"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 10px; ; margin-left: 10px; margin-right: 10px;"></a>
                                     Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8">Super Resolution using CRN Architecture</a>
