deleted some stuff

--- a/experience.html
+++ b/experience.html
@@ -34,7 +34,7 @@
                 "@context": "https://schema.org",
                 "@type": "Organization",
                 "name": "Venkatesh Desai",
-                "url": "https://venkydesai.github.io/experience.html",
+                "url": "https://venkydesai.github.io/",
                 "logo": "https://venkydesai.github.io/images/venky_profile.png",
                 "description": "Venkatesh Desai",
                 "address": {
@@ -51,11 +51,8 @@
                     "contactType": "Personal Profile"
                 },
                 "sameAs": [
-                    "https://www.facebook.com/abhinavbohra01",
-                    "https://www.twitter.com/abhinavbohra01",
                     "https://www.linkedin.com/in/venkateshdesai99",
                     "https://github.com/venkydesai",
-                    "https://scholar.google.com/citations?user=F51Ct9oAAAAJ&hl=en"
                 ]
             }
         </script>
