--- a/research_work.html
+++ b/research_work.html
@@ -34,7 +34,7 @@
                 "@context": "https://schema.org",
                 "@type": "Organization",
                 "name": "Venkatesh Desai",
-                "url": "https://venkydesai.github.io/experience.html",
+                "url": "https://venkydesai.github.io/",
                 "logo": "https://venkydesai.github.io/images/venky_profile.png",
                 "description": "Venkatesh Desai ... ",
                 "address": {
