--- a/research_work.html
+++ b/research_work.html
@@ -7,8 +7,8 @@
         <meta property="og:site_name" content="Venkatesh's Webpage">
         <meta property="og:title" content="Venkatesh Desai Machine Learning Projects">
         <meta property="og:description" content="Venkatesh Desai Machine Learning Projects">
-        <meta property="og:url" content="https://venkydesai.github.io/ml-projects.html">
-        <link rel="canonical" href="https://venkydesai.github.io/ml-projects.html">
+        <meta property="og:url" content="https://venkydesai.github.io/">
+        <link rel="canonical" href="https://venkydesai.github.io/">
         <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
