--- a/skills.html
+++ b/skills.html
@@ -8,8 +8,8 @@
         <meta property="og:site_name" content="Venkatesh's Webpage">
         <meta property="og:title" content="Venkatesh Desai Skills">
         <meta property="og:description" content="Venkatesh Desai Skills">
-        <meta property="og:url" content="https://venkydesai.github.io/skills.html">
-        <link rel="canonical" href="https://venkydesai.github.io/skills.html">
+        <meta property="og:url" content="https://venkydesai.github.io/">
+        <link rel="canonical" href="https://venkydesai.github.io/">
         <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
