--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
       <div class="masthead__menu">
          <nav id="site-nav" class="greedy-nav">
             <ul class="visible-links">
-               <li style="font-size: medium;"><a href="index.html">Home</a></li>
+               <li style="font-size: medium;"><a href="about_me.html">Home</a></li>
                <li style="font-size: medium;"><a href="experience.html">Experience</a></li>
                <li style="font-size: medium;"><a href="research_work.html">Research Work</a></li>
                <li style="font-size: medium;"><a href="projects.html">Projects</a></li>
