--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,37 @@
                                         <div class="media-content">
                                             <div class="row">
                                                 <div class="col-lg-9">
+                                                    <p class="title is-5">Scan Matching using ICP</p>
+                                                    <p class="subtitle is-6"><p>I implemented the Iterative Closest Point (ICP) algorithm to estimate the rigid transformation aligning two 3D point clouds <em>X</em> and <em>Y</em>. The initial guess (<em>t<sub>o</sub></em>, <em>R<sub>o</sub></em>) ∈ SE(d) for the optimal rigid registration <em>y = R<sub>x</sub> + t</em> aligning <em>X</em> to <em>Y</em>.</p>
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
+                                                </div>
+                                            </div>
+                                    <div class="content">
+                                        <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point"><img src="images/notable_projects/ICp/2.gif" style="width:100%; height:165px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
+                                        <div class="tags">
+                                            <span class="tag">Python</span>
+                                            <span class="tag">Pandas</span>
+                                            <span class="tag">Numpy</span>
+                                            <span class="tag">Lie Group</span>
+
+                                        </div>
+                                    </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="list__item" style="margin-top: 2%;">
+                            <div class="card" style="height: 360px;">
+                                <div class="card-content">
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <div class="row">
+                                                <div class="col-lg-9">
                                                     <p class="title is-5">Path planning using A Star</p>
                                                     <p class="subtitle is-6">Implemented A* Search algorithm for route planning in occupancy grid maps</p>
                                                 </div>
