--- a/research_work.html
+++ b/research_work.html
@@ -287,15 +287,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="list__item" style="margin-top: 2%;">
+                <!-- <div class="list__item" style="margin-top: 2%;">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <!-- <div class="media-left">
-                                    <figure class="image is-48x48">
-                                        <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
-                                    </figure>
-                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Scan Matching using Iterative closest point
                                     </p>
@@ -314,14 +309,12 @@
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div5">
                                         <img class="mySlides" src="images/notable_projects/ICp/2.gif" style="width:100%; height:285px; border-radius: 10px;">
-                                        <!-- <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
-                                        <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this,1)">&#10095;</a> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <br>
             </div>
         </div>
