Removed Exp from index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
         <meta property="og:site_name" content="Venkatesh's Webpage">
-        <meta property="og:title" content="Venkatesh Desai Experience">
-        <meta property="og:description" content="Venkatesh Desai Experience">
+        <meta property="og:title" content="Venkatesh Desai">
+        <meta property="og:description" content="Venkatesh Desai">
         <meta property="og:url" content="https://venkydesai.github.io/">
         <link rel="canonical" href="https://venkydesai.github.io/">
         <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
