Cleaned and new_tab

--- a/sidebar.html
+++ b/sidebar.html
@@ -7,13 +7,13 @@
 		</div>
 		<div class="author__urls-wrapper">
 			<ul class="author__urls social-icons">
-				<li><a href="mailto:venkateshdesai301@gmail.com">
+				<li><a href="mailto:venkateshdesai301@gmail.com" target="_blank">
 					<i class="fa fa-fw fa-envelope-square" aria-hidden="true" style="font-size: 20px;"></i>Email
 				</a></li>
-				<li><a href="https://www.linkedin.com/in/venkateshdesai99">
+				<li><a href="https://www.linkedin.com/in/venkateshdesai99" target="_blank">
 					<i class="fa fa-fw fa-linkedin-square" aria-hidden="true" style="font-size: 20px;"></i>LinkedIn
 				</a></li>
-				<li><a href="https://github.com/venkydesai">
+				<li><a href="https://github.com/venkydesai" target="_blank">
 					<i class="fa fa-fw fa-github" aria-hidden="true" style="font-size: 20px;"></i>Github
 				</a></li>
 			</ul>
