Waree_point_cloud_proj

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,66 @@
                                         <div class="media-content">
                                             <div class="row">
                                                 <div class="col-lg-9">
+                                                    <p class="title is-5">Warren Buffet GPT model</p>
+                                                    <p class="subtitle is-6"><p>Trained a language model from scratch that generates financial discourse in Warren Buffet's style
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <a href="https://github.com/venkydesai/warren_buffet_language_model"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
+                                                </div>
+                                            </div>
+                                    <div class="content">
+                                        <a href="https://github.com/venkydesai/warren_buffet_language_model"><img src="images/ml-projects/warren_buffet.jpeg" style="width:100%; height:165px; border-radius: 10px; margin-top: 5%; margin-bottom: 3%; align-self: center;"></a>
+                                        <div class="tags">
+                                            <span class="tag">Python</span>
+                                            <span class="tag">Pytorch</span>
+                                            <span class="tag">Transformers</span>
+                                            <span class="tag">GPT</span>
+
+                                        </div>
+                                    </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="list__item" style="margin-top: 2%;">
+                            <div class="card" style="height: 360px;">
+                                <div class="card-content">
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <div class="row">
+                                                <div class="col-lg-9">
+                                                    <p class="title is-5">Point Cloud Analysis</p>
+                                                    <p class="subtitle is-6">Used RANSAC to localize a sphere and a cylinder given point cloud data</p>
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <a href="https://github.com/venkydesai/POINT_CLOUD_ANALYSIS"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <a href="https://github.com/venkydesai/POINT_CLOUD_ANALYSIS"><img src="images/ml-projects/point_cloud.png" style="width:100%; height:190px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
+                                        <div class="tags">
+                                            <span class="tag">Python</span>
+                                            <span class="tag">Numpy</span>
+                                            <span class="tag">Point Cloud</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="list__item" style="margin-top: 2%;">
+                            <div class="card" style="height: 360px;">
+                                <div class="card-content">
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <div class="row">
+                                                <div class="col-lg-9">
                                                     <p class="title is-5">State Estimation using Particle Filtering</p>
                                                     <p class="subtitle is-6">Implemented particle filtering for state estimation of a differential-drive ground robot on a Lie group</p>
                                                 </div>
