--- a/skills.html
+++ b/skills.html
@@ -88,6 +88,7 @@
                 <b>Tools</b>
                 <ul style="padding-top: 5px; padding-bottom: 15px">
                     <li>Proficient:
+                        <span class="tag">ROS</span>
                         <span class="tag">Numpy</span>
                         <span class="tag">Pandas</span>
                         <span class="tag">scikit-learn</span>
@@ -104,9 +105,15 @@
                         <span class="tag">ZenML</span>
                         <span class="tag">MLflow</span>
                         <span class="tag">PowerBi</span>
+                        <span class="tag">Weights & Biases</span>
+                        <span class="tag">nnsight</span>
                         <span class="tag">Tableau</span>
-
-
+                        <span class="tag">spaCy</span>
+                        <span class="tag">Gensim</span>
+                        <span class="tag">Hugging Face</span>
+                        <span class="tag">Fusion 360</span>
+                        <span class="tag">Solidworks</span>
+                        <span class="tag">CATIA</span>
                     </li>
                     <li>Familiar:&nbsp;
                         <span class="tag">Spark</span>
@@ -116,6 +123,27 @@
                         <span class="tag">Kafka</span>
                         <span class="tag">Databricks</span>
                     </li>
+                </ul>
+                <br>
+                <b>Robotics</b>
+                <ul style="padding-top: 5px; padding-bottom: 15px">
+                    <li>Proficient:
+                        <span class="tag">ROS</span>
+                        <span class="tag">Pybullet</span>
+                        <span class="tag">OpenAI Gym</span>
+                        <span class="tag">Gazebo</span>
+                        <span class="tag">Rviz</span>
+                        <span class="tag">OpenCV</span>
+                        <span class="tag">PCL (Point Cloud Library)</span>
+                    </li>
+                    <!-- <li>Familiar:&nbsp;
+                        <span class="tag">Spark</span>
+                        <span class="tag">Snowflake</span>
+                        <span class="tag">Jira</span>
+                        <span class="tag">Azure</span>
+                        <span class="tag">Kafka</span>
+                        <span class="tag">Databricks</span>
+                    </li> -->
                 </ul>
                 <br>
                 <b>Modeling Techniques:</b>
