--- a/experience.html
+++ b/experience.html
@@ -82,9 +82,9 @@
                             </div>
                             <div class="content">
                                 <ul>
-                                    <li>Collaborating on enhancing nnsight library, a package for interpreting and manipulating the internals of a neural network </li>
-                                    <li>Developing tutorials with GPT2, Llama models for users to seamlessly use nnsight library in conducting experiments</li>
-                                    <li>Graduate Teaching Assistant – Assisting a Deep Learning course (CS7150), focusing on Neural Network, Transformers, VAE’s, Stable Diffusion. Designed assignments, conducted TA sessions, organized Quiz and led discussions on cutting-edge research areas such as GAN’s, Image Transformer, and LLM to help students stay up-to-date of the latest advancements </li>
+                                    <li>As a Research Assistant on the NSF-supported National Deep Inference Fabric project, I'm helping advance large-scale AI science. The goal is to provide a robust and transparent AI inference service that empowers scientists nationwide to expand, accelerate, and democratize impactful AI research. This infrastructure allows you to access and modify activations, gradients, and customize any step essentially putting the power of a massive 70-billion parameter model on your own laptop easily</li>
+                                    <li>As a Teaching Assistant, I assisted the course CS 7150 Deep Learning in designing comprehensive homework assignments that covered a spectrum of neural network concepts, ranging from foundational principles (Building Optimizers, Neural Network models from scratch) to cutting-edge topics such as Stable Diffusion and Transformers</li>
+                                    </li>Hosted office hours and coordinated class discussions where students reviewed assigned research papers before submitting their work, demonstrated their grasp of domain knowledge, and fostered critical thinking among high-achieving students, resulting in increased student engagement in research activities</li>
                                 </ul>
                                 <div class="tags">
                                     <span class="tag">Python</span>
