--- a/skills.html
+++ b/skills.html
@@ -114,6 +114,7 @@
                         <span class="tag">Fusion 360</span>
                         <span class="tag">Solidworks</span>
                         <span class="tag">CATIA</span>
+                        <span class="tag">TensorRT</span>
                     </li>
                     <li>Familiar:&nbsp;
                         <span class="tag">Spark</span>
