--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
                <li style="font-size: medium;"><a href="research_work.html">Research Work</a></li>
                <li style="font-size: medium;"><a href="projects.html">Projects</a></li>
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
-               <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf" target="_blank">Resume</a></li>
+               <li style="font-size: medium;"><a href="files/Venkatesh_Resume.pdf" target="_blank">Resume</a></li>
             </ul>
          <div style="float: right; margin: -40px ; height:50px; width: 50px ;"><img src="images/VD_logo_circular.png" alt="Venkatesh Logo"></img></div>
          </nav>
