--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Venkatesh's Webpage">
-        <meta property="og:title" content="Venkatesh Desai">
-        <meta property="og:description" content="Venkatesh Desai">
-        <meta property="og:url" content="https://venkydesai.github.io/">
-        <link rel="canonical" href="https://venkydesai.github.io/">
-        <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
+        <meta property="og:site_name" content="Pavan's Webpage">
+        <meta property="og:title" content="Pavan Kumar Medarametla">
+        <meta property="og:description" content="Pavan Kumar Medarametla">
+        <meta property="og:url" content="https://pavankumarchowdary35.github.io/">
+        <link rel="canonical" href="https://pavankumarchowdary35.github.io/">
+        <!-- <link rel="icon" type="image/png" href="images/VD_logo_circular.png"> -->
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="cleartype" content="on">
-        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.)<br>Northeastern University">
-        <meta name="keywords" content="Venkatesh Desai, MS in Robotics (Computer Science conc.), Northeastern University">
-        <meta name="author" content="Venkatesh Desai">
+        <meta name="description" content="Pavan Kumar Medarametla - MS in Mechatronics (focus on AI)<br>University of Siegen">
+        <meta name="keywords" content="Pavan Kumar Medarametla, MS in Mechatronics (focus on AI), University of Siegen">
+        <meta name="author" content="Pavan Kumar Medarametla">
 
     <!-- Google Analytics and MS Clarity -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNSPB7PT9W"></script>
@@ -33,21 +33,21 @@
             {
                 "@context": "https://schema.org",
                 "@type": "Organization",
-                "name": "Venkatesh Desai",
-                "url": "https://venkydesai.github.io",
-                "logo": "https://venkydesai.github.io/images/venky_profile.png",
+                "name": "Pavan Kumar Medarametla",
+                "url": "https://pavankumarchowdary35.github.io/",
+                "logo": "https://pavankumarchowdary35.github.io/images/pavan_photo.png",
                 "description":
                 "address": {
                     "@type": "PostalAddress",
-                    "addressLocality": "Boston",
-                    "addressRegion": "Massachusetts",
-                    "postalCode": "02120",
-                    "addressCountry": "USA"
+                    "addressLocality": "Siegen",
+                    "addressRegion": "NRW",
+                    "postalCode": "57076",
+                    "addressCountry": "Germany"
                 },
                 "contactPoint": {
                     "@type": "ContactPoint",
-                    "telephone": " +1-857-2306277",
-                    "email": "venkateshdesai301@gmail.com",
+                    "telephone": "+49 15753627865",
+                    "email": "pavankumarchowdary35@gmail.com",
                     "contactType": "Personal Profile"
                 },
             }
@@ -57,16 +57,16 @@
         <div id="header"></div>
         <div id="main" role="main">
             <div id="sidebar"></div>
-            <article class="page" itemscope itemtype="http://venkydesai.github.io" style="padding-right: 4%; padding-left: 2%;">
-                <meta itemprop="headline" content="Venkatesh Desai - About me">
-                <meta itemprop="description" content="Venkatesh Desai - A candidate for Master's in Robotics (Computer Science) at Northeastern University.">
+            <article class="page" itemscope itemtype="https://pavankumarchowdary35.github.io/" style="padding-right: 4%; padding-left: 2%;">
+                <meta itemprop="headline" content="Pavan Kumar Medarametla - About me">
+                <meta itemprop="description" content="Pavan Kumar Medarametla - A candidate for Master's in Mechatronics at University of Siegen.">
                 <div class="page__inner-wrap" style="text-align: justify; text-justify: inter-word;">
                     <h2 style="font-size: xx-large; text-align: center;"><b>About Me</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
 
-                        <p><em>"Unraveling the mysteries hidden in data, sculpting the brains of artificial intelligence layer by layer, teaching robots to navigate the world,  empowering machines with the sense of sight, and empowering machines to comprehend and communicate with us."</em></p>
+                        <!-- <p><em>"Unraveling the mysteries hidden in data, sculpting the brains of artificial intelligence layer by layer, teaching robots to navigate the world,  empowering machines with the sense of sight, and empowering machines to comprehend and communicate with us."</em></p> -->
                         
-                        <p>I am currently pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2021. As a Research Assistant for <b>Prof. David Bau</b>, I am deeply engaged in interpreting Neural Networks. My work involves collaborating on the enhancement of the <b>nnsight</b> library, a package designed for interpreting and manipulating the internals of neural networks. Additionally, I am assisting as a <b>Graduate Teaching Assistant</b> for course <b>CS7150 - Deep Learning</b>. This course delves into advanced topics such as <b>Neural Networks, Transformers, VAEs, and Stable Diffusion, Image Transformers, GANs, and LLM's</b> concepts.</p>
+                        <p>I am currently pursuing my Master's degree in Mechatronics at <a href="https://www.uni-siegen.de/zsb/studienangebot/master/mechatronics.html">Siegen University, Boston</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2020. As a Research Assistant for <b>Prof. David Bau</b>, I am deeply engaged in interpreting Neural Networks. My work involves collaborating on the enhancement of the <b>nnsight</b> library, a package designed for interpreting and manipulating the internals of neural networks. Additionally, I am assisting as a <b>Graduate Teaching Assistant</b> for course <b>CS7150 - Deep Learning</b>. This course delves into advanced topics such as <b>Neural Networks, Transformers, VAEs, and Stable Diffusion, Image Transformers, GANs, and LLM's</b> concepts.</p>
 
                         <p>My professional interests extend to projects spanning <b>Deep Learning, Computer Vision, and Natural Language Processing, Machine Learning</b>. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life.</p>
 
