updates on Home

--- a/404.html
+++ b/404.html
@@ -4,18 +4,18 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Venkatesh's Webpage">
-        <meta property="og:title" content="Venkatesh Desai">
-        <meta property="og:description" content="Venkatesh Desai">
-        <meta property="og:url" content="https://venkydesai.github.io">
-        <link rel="canonical" href="https://venkydesai.github.io">
+        <meta property="og:site_name" content="Pavan's Webpage">
+        <meta property="og:title" content="Pavan Kumar Medarametla">
+        <meta property="og:description" content="Pavan Kumar Medarametla">
+        <meta property="og:url" content="https://pavankumarchowdary35.github.io/">
+        <link rel="canonical" href="https://pavankumarchowdary35.github.io/">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="cleartype" content="on">
-        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.), Northeastern University">
-        <meta name="keywords" content="Venkatesh Desai, MS in Robotics (Computer Science conc.), Northeastern University">
-        <meta name="author" content="Venkatesh Desai">
+        <meta name="description" content="Pavan Kumar Medarametla - MS in Mechatronics (focus on AI), University of Siegen">
+        <meta name="keywords" content="Pavan Kumar, MS in Mechatronics (focus on AI), University of Siegen">
+        <meta name="author" content="Pavan Kumar Medarametla">
 
     <!-- Google Analytics and MS Clarity -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNSPB7PT9W"></script>
