--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
                         <!-- <p><em>"Unraveling the mysteries hidden in data, sculpting the brains of artificial intelligence layer by layer, teaching robots to navigate the world,  empowering machines with the sense of sight, and empowering machines to comprehend and communicate with us."</em></p> -->
                         
-                        <p>I am currently pursuing my Master's degree in Mechatronics at <a href="https://www.uni-siegen.de/zsb/studienangebot/master/mechatronics.html">Siegen University, Boston</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2020. As a Research Assistant for <b>Prof. David Bau</b>, I am deeply engaged in interpreting Neural Networks. My work involves collaborating on the enhancement of the <b>nnsight</b> library, a package designed for interpreting and manipulating the internals of neural networks. Additionally, I am assisting as a <b>Graduate Teaching Assistant</b> for course <b>CS7150 - Deep Learning</b>. This course delves into advanced topics such as <b>Neural Networks, Transformers, VAEs, and Stable Diffusion, Image Transformers, GANs, and LLM's</b> concepts.</p>
+                        <p>I am currently pursuing my Master's degree in Mechatronics at <a href="https://www.uni-siegen.de/zsb/studienangebot/master/mechatronics.html">University of Siegen</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2020. Recently I finished my Internship at <b>Bayer AG</b> worked on <b>FactFinder</b> project the cutting edge topic of Fact Verification of LLM generated text I am deeply engaged in interpreting Neural Networks. My work involves collaborating on the enhancement of the <b>nnsight</b> library, a package designed for interpreting and manipulating the internals of neural networks. Additionally, I am assisting as a <b>Graduate Teaching Assistant</b> for course <b>CS7150 - Deep Learning</b>. This course delves into advanced topics such as <b>Neural Networks, Transformers, VAEs, and Stable Diffusion, Image Transformers, GANs, and LLM's</b> concepts.</p>
 
                         <p>My professional interests extend to projects spanning <b>Deep Learning, Computer Vision, and Natural Language Processing, Machine Learning</b>. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life.</p>
 
-                        <p>When not coding, you will most often find me playing cricket, chess or supporting Virat Kohli, Magnus Carlsen, and Carlos Sainz (Smooth Operator...) :)</p>
+                        <p>When not coding, you will most often find me playing cricket, badminton :)</p>
 
                         <p>If you share my passion for innovation and technological advancement, I invite you to join me on this journey of exploration and discovery.</p>
 
@@ -78,7 +78,7 @@
                     </section>
                     <h2 style="font-size: x-large;"><b>Interests</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
-                        <p>Robotics, Deep Learning, Natural Language Processing, Computer Vision, Machine Learning, Data Science</p>
+                        <p>Deep Learning, Natural Language Processing, Computer Vision, Machine Learning, Data Science</p>
                     </section>
                     <footer class="page__meta"><br></footer>
                 </div>
