--- a/sidebar.html
+++ b/sidebar.html
@@ -8,7 +8,7 @@
 		<div class="author__urls-wrapper">
 			<ul class="author__urls social-icons">
 				<li><a href="mailto:pavankumarchowdary35@gmail.com">
-					<i class="fas fa-envelope"></i> Email
+					<i class="fa fa-fw fa-envelope-square" aria-hidden="true" style="font-size: 20px;"></i>Email
 				</a></li>
 				<li><a href="https://www.linkedin.com/in/pavan-kumar-medarametla-9919841a1/" target="_blank">
 					<i class="fa fa-fw fa-linkedin-square" aria-hidden="true" style="font-size: 20px;"></i>LinkedIn
